--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Orbis pizdus</h1>
+        <h1>Orbis pizdus, neexistus</h1>
     </header>
     
     <script src="/web/Javascript/index.js"></script>
