--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,14 @@
     <header>
         <h1>Orbis pizdus, neexistus</h1>
     </header>
+    <main>
+        <p>
+            orbis pizdus
+        </p>
+    </main>
+    <footer>
+        
+    </footer>
     
     <script src="/web/Javascript/index.js"></script>
 </body>
