Jsem to udělal hnusné samozřejmě
Jen tak pro prdel,  schnou mi vlasy

--- a/web/index.html
+++ b/web/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/web/CSS/index.css">
+    <link rel="stylesheet" href="CSS/index.css">
     <title>Orbis pizdus</title>
 </head>
 <body>
+     <!-- Header vlastně bude jen to centurnutý vyhledávání, jestli se chápem bude to nějak uprostřed nahoř -->
     <header>
-        <h1>Orbis pizdus, neexistus</h1>
+        <ptvr>
+        <h1 id="hlNapisPico">Orbis pizdus/</h1><input id="hlVyhledavacPolic" type="search">
+        </ptvr>
     </header>
+    <!-- Všechny píčoviny už potom -->
     <main>
         <p>
             orbis pizdus
@@ -19,6 +23,6 @@
         
     </footer>
     
-    <script src="/web/Javascript/index.js"></script>
+    <script src="Javascript/index.js"></script>
 </body>
 </html>
