--- a/web/index.html
+++ b/web/index.html
@@ -7,11 +7,9 @@
     <title>Orbis pizdus</title>
 </head>
 <body>
-     <!-- Header vlastně bude jen to centurnutý vyhledávání, jestli se chápem bude to nějak uprostřed nahoř -->
+    <!-- Header vlastně bude jen to centurnutý vyhledávání, jestli se chápem bude to nějak uprostřed nahoř -->
     <header>
-        <ptvr>
-        <h1 id="hlNapisPico">Orbis pizdus/</h1><input id="hlVyhledavacPolic" type="search">
-        </ptvr>
+        <h1 id="hlNapisPico">Orbis pizdus/<input id="hlVyhledavacPolic" type="search"></h1>
     </header>
     <!-- Všechny píčoviny už potom -->
     <main>
