Kočka dělá mňau
fvwgr

--- a/web/index.html
+++ b/web/index.html
@@ -9,13 +9,12 @@
 <body>
     <!-- Header vlastně bude jen to centurnutý vyhledávání, jestli se chápem bude to nějak uprostřed nahoř -->
     <header>
-        <h1 id="hlNapisPico">Orbis pizdus/<input id="hlVyhledavacPolic" type="search"></h1>
+        <h1 id="hlNapisPico">Orbis pizdus/<input id="hlVyhledavacPolic" type="search" placeholder="Proč má kočka pivo?"></h1>
     </header>
-    <!-- Všechny píčoviny už potom -->
+    <!-- Všechny píčoviny už potom, tohle bude ten hlavní středovej panel -->
     <main>
-        <p>
-            orbis pizdus
-        </p>
+        <nejhlavnejsipanel>
+        </nejhlavnejsipanel>
     </main>
     <footer>
         
