--- a/web/index.html
+++ b/web/index.html
@@ -13,12 +13,16 @@
     </header>
     <!-- Všechny píčoviny už potom, tohle bude ten hlavní středovej panel -->
     <main>
-        <nejhlavnejsipanel>
-            <button class="mainbtn1 mainbtn">1</button>
-            <button class="mainbtn2 mainbtn">2</button>
-            <button class="mainbtn3 mainbtn">3</button>
-            <button class="mainbtn4 mainbtn">4</button>
-        </nejhlavnejsipanel>
+        <div class="nejhlavnejsipanel">
+            <div>
+                <button class="mainbtn1 mainbtn">1</button>
+                <button class="mainbtn2 mainbtn">2</button>
+            </div>
+            <div>
+                <button class="mainbtn3 mainbtn">3</button>
+                <button class="mainbtn4 mainbtn">4</button>
+            </div>
+        </div>
     </main>
     <footer>
         
