a ted jsou z toho Win 11

--- a/web/index.html
+++ b/web/index.html
@@ -15,12 +15,12 @@
     <main>
         <div class="nejhlavnejsipanel">
             <div>
-                <button class="mainbtn1 mainbtn">1</button>
-                <button class="mainbtn2 mainbtn">2</button>
+                <button class="mainbtn1 mainbtn"></button>
+                <button class="mainbtn2 mainbtn"></button>
             </div>
             <div>
-                <button class="mainbtn3 mainbtn">3</button>
-                <button class="mainbtn4 mainbtn">4</button>
+                <button class="mainbtn3 mainbtn"></button>
+                <button class="mainbtn4 mainbtn"></button>
             </div>
         </div>
     </main>
