--- a/web/pizdomanie/ctvrte.html
+++ b/web/pizdomanie/ctvrte.html
@@ -13,21 +13,7 @@
     </header>
     <!-- Všechny píčoviny už potom, tohle bude ten hlavní středovej panel -->
     <main>
-        <div class="nejhlavnejsipanel">
-            <div>
-                 <button class="mainbtn1 mainbtn" href="pizdomanie/ctvrte.html">
-                <!-- Jsi tady jen připravím co tam bude, a jak to celé bude vypadat, on vlastně ten button bude celej odkaz totiž -->
-                    
-
-                </button>
-                <button class="mainbtn2 mainbtn">
-                </button>
-            </div>
-            <div>
-                <button class="mainbtn3 mainbtn"></button>
-                <button class="mainbtn4 mainbtn"></button>
-            </div>
-        </div>
+Tonda je bůh
     </main>
     <footer>
         
