--- a/web/pizdomanie/druha.html
+++ b/web/pizdomanie/druha.html
@@ -15,11 +15,7 @@
     <main>
         <div class="nejhlavnejsipanel">
             <div>
-                 <button class="mainbtn1 mainbtn" href="pizdomanie/ctvrte.html">
-                <!-- Jsi tady jen připravím co tam bude, a jak to celé bude vypadat, on vlastně ten button bude celej odkaz totiž -->
-                    
-
-                </button>
+                <button class="mainbtn1 mainbtn"></button>
                 <button class="mainbtn2 mainbtn">
                 </button>
             </div>
