zapisovani do elementu bez mazani

--- a/web/pizdomanie/KockopesAI.html
+++ b/web/pizdomanie/KockopesAI.html
@@ -13,7 +13,7 @@
         <li>pokus</li>
         <li>pokus</li>
     </ul>
-    <div class="grafika"></div>
+    <div class="grafika" id="grafika"></div>
     <div class="btn-container">
         <button class="btn">1</button>
         <button class="btn">2</button>
