ted je to trochu hnusny a rozbitý
 ale to jen dočasně

--- a/web/pizdomanie/KockopesAI.html
+++ b/web/pizdomanie/KockopesAI.html
@@ -13,7 +13,13 @@
         <li>pokus</li>
         <li>pokus</li>
     </ul>
-    <div class="grafika" id="grafika"></div>
+    <div class="grafika" id="grafika">
+        <img src="/web/images/sirkav2.svg" alt="">
+        <img src="/web/images/sirkav2.svg" alt="">
+        <img src="/web/images/sirkav2.svg" alt="">
+        <img src="/web/images/sirkav2.svg" alt="">
+        <img src="/web/images/sirkav2.svg" alt="">
+    </div>
     <div class="btn-container">
         <button class="btn">1</button>
         <button class="btn">2</button>
