--- a/web/pizdomanie/KockopesAI.html
+++ b/web/pizdomanie/KockopesAI.html
@@ -14,17 +14,13 @@
         <li>pokus</li>
     </ul>
     <div class="grafika" id="grafika">
-        <img src="/web/images/sirkav2.svg" alt="">
-        <img src="/web/images/sirkav2.svg" alt="">
-        <img src="/web/images/sirkav2.svg" alt="">
-        <img src="/web/images/sirkav2.svg" alt="">
-        <img src="/web/images/sirkav2.svg" alt="">
     </div>
     <div class="btn-container">
         <button class="btn">1</button>
         <button class="btn">2</button>
         <button class="btn">3</button>
     </div>
+    <p id="consola"></p>
     <div class="input" id="input">
         <input type="number" id="kockajebuh">
         <button type="submit" id="sub" onclick="input()">hrad</button>
