tondo, tohle je pro tebe

--- a/web/pizdomanie/KockopesAI.html
+++ b/web/pizdomanie/KockopesAI.html
@@ -20,7 +20,10 @@
         <button class="btn">2</button>
         <button class="btn">3</button>
     </div>
-    <p id="consola"></p>
+    <div id="consola" class="consola">
+        <div id="nigga1"></div>
+        <div id="nigga2"></div>
+    </div>
     <div class="input" id="input">
         <input type="number" id="kockajebuh">
         <button type="submit" id="sub" onclick="input()">hrad</button>
