--- a/web/pizdomanie/KockopesAI.html
+++ b/web/pizdomanie/KockopesAI.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kockopes AI</title>
-    <link rel="stylesheet" href="/web/CSS/AI.css">
+    <link rel="stylesheet" href="C:\Users\warez\OneDrive\Dokumenty\GitHub\orbis-pizdus\web\CSS\AI.css">
 </head>
 <body>
     <h1>kockopes AI</h1>
@@ -28,6 +28,6 @@
         <input type="number" id="kockajebuh">
         <button type="submit" id="sub" onclick="input()">hrad</button>
     </div>
-    <script src="/web/Javascript/AI.js"></script>
+    <script src="C:\Users\warez\OneDrive\Dokumenty\GitHub\orbis-pizdus\web\Javascript\AI.js"></script>
 </body>
 </html>
