--- a/web/pizdomanie/KockopesAI.html
+++ b/web/pizdomanie/KockopesAI.html
@@ -16,9 +16,9 @@
     <div class="grafika" id="grafika">
     </div>
     <div class="btn-container">
-        <button class="btn">1</button>
-        <button class="btn">2</button>
-        <button class="btn">3</button>
+        <button class="btn" onclick="pridej(1)">1</button>
+        <button class="btn" onclick="pridej(2)">2</button>
+        <button class="btn" onclick="pridej(3)">3</button>
     </div>
     <div id="consola" class="consola">
         <div id="nigga1"></div>
