--- a/web/pizdomanie/KockopesAI.html
+++ b/web/pizdomanie/KockopesAI.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kockopes AI</title>
-    <link rel="stylesheet" href="C:\Users\warez\OneDrive\Dokumenty\GitHub\orbis-pizdus\web\CSS\AI.css">
+    <link rel="stylesheet" href="/web/CSS/AI.css">
 </head>
 <body>
     <h1>kockopes AI</h1>
@@ -16,9 +16,11 @@
     <div class="grafika" id="grafika">
     </div>
     <div class="btn-container">
+        <span id="jepka">
         <button class="btn" onclick="pridej(1)">1</button>
         <button class="btn" onclick="pridej(2)">2</button>
         <button class="btn" onclick="pridej(3)">3</button>
+        </span>
     </div>
     <div id="consola" class="consola">
         <div id="nigga1"></div>
@@ -28,6 +30,6 @@
         <input type="number" id="kockajebuh">
         <button type="submit" id="sub" onclick="input()">hrad</button>
     </div>
-    <script src="C:\Users\warez\OneDrive\Dokumenty\GitHub\orbis-pizdus\web\Javascript\AI.js"></script>
+    <script src="/web/Javascript/AI.js"></script>
 </body>
 </html>
